[package]
name = "ipecho"
version = "0.1.0"
authors = ["Henrik D. Flemmen <hflemmen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet=""

[[bin]]
name="ipecho-server"
path="src/server.rs"

[[bin]]
name="ipecho-client"
path="src/client.rs"